# practice-rust

./: README.md
actix.rs/basics-extractors-handlers/: Cargo.toml
actix.rs/hello-world/src/: main.rs
hello_log/: Cargo.toml
hello_log/src/: main.rs
learn.microsoft.com/rusty-journal/: Cargo.toml  README.md
snoozetime.github.io/rust-evm/: Cargo.toml  bytecode-addtion-sol  bytecode-jump  bytecode-jump-else  bytecode-loop  bytecode-memory
various/command-1/: Cargo.toml
various/debug-trait/: .gitignore  Cargo.toml
various/ethabi/: Cargo.toml
various/greeks/: Cargo.toml
various/grrs/: Cargo.toml
various/json-typegen-01/: Cargo.toml
various/macros-02/: Cargo.toml
various/macros-3/: Cargo.toml
various/macros-3/src/: functions.rs  lib.rs
various/macros-3/src/snapshots/: macros_3__functions__test__snapshot__generate_something.snap
various/macros-3/tests/: functions.rs
various/partial-retrieval-from-repo/: Cargo.toml
various/risk-free-rate-for-cmt/: Cargo.toml
various/round-time/: Cargo.toml
various/serde-json/: Cargo.toml  v3pool.json
various/test_snapshot_1/: Cargo.toml
various/trade_cmocoin/: Cargo.toml
various/trade_gmocoin/: .gitignore  Cargo.toml
various/trade_gmocoin/src/: lib.rs
various/vix-index/: Cargo.toml
various/ws-candid/: Cargo.toml
ws-api-arch/api_axum_diesel_sqlite/: .gitignore  Cargo.toml  database.db
ws-api-arch/api_axum_state/: Cargo.toml
ws-axum/example/: Cargo.toml
ws-axum/hello_world/: Cargo.toml
ws-axum/user_management/: .gitignore  Cargo.toml
ws-interactive/by-dialoguer/: .gitignore  Cargo.toml
(+145 files in other folders)
