[package]
name = "macros-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = "2.0.49"

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml"] }
rust-format = "0.3.4"
